--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     font-family: 'Poppins', sans-serif;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(#00000052, #0000006b), url(images/bg-1.jpg);
+    background-image: linear-gradient(#0000003d, #000000b0), url(images/bg-1.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -154,13 +154,19 @@ ul li a img{
 /*=========================
     Videos and Apps
 =========================*/
-.video-apps{
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+.video, .products, .app{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
 }
-.video-apps img{
+.video img{
+    width: 100%;
+    margin: 0 auto;
+}
+.products img{
+    width: 100%;
+    margin: 0 auto;
+}
+.app img{
     width: 100%;
     margin: 0 auto;
 }
@@ -170,6 +176,8 @@ ul li a img{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
+    align-items: center;
 }
 .single-discover h1{
     text-align: center;
@@ -183,6 +191,80 @@ ul li a img{
     color: antiquewhite;
     border-radius: 2px;
     margin: 10px;
+}
+/*=========================
+    Footer
+=========================*/
+footer{
+    background: #000;
+    padding: 30px 0 0 0;
+    color: seashell;
+    text-align: center;
+}
+.footer-parts{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.footer-left{
+    padding-top: 10px;
+    position: relative;
+}
+.footer-left input{
+    background: #383838;
+    padding: 16px;
+    border: none;
+    outline: 1px solid gray;
+    width: 80%;
+}
+.footer-left p{
+    margin: 20px 0;
+}
+.fa-paper-plane{
+    font-weight: 900;
+    background: #ff4700;
+    padding: 7px 12px;
+    font-size: 27px;
+    position: absolute;
+    top: 13px;
+    right: 6.5%;
+}
+.footer-middle img{
+    width: 50%;
+}
+.fa-facebook{
+    font-size: 35px;
+    color: #0066ff;
+    padding: 10px
+}
+.fa-linkedin{
+    font-size: 35px;
+    color: #006eff;
+    padding: 10px
+}
+.fa-youtube{
+    font-size: 35px;
+    color: #ff0022;
+    padding: 10px
+}
+.fa-twitter{
+    font-size: 35px;
+    color: #00aeff;
+    padding: 10px
+}
+.footer-right{
+    font-size: 18px;
+}
+.footer-right h4{
+    margin-top: 10px;
+}
+.footer-right i{
+    padding-right: 10px;
+}
+.copy-right{
+    padding: 20px;
+    position: relative;
+    top: 60px;
+    background: #141414;
 }
 /*=========================
     Media Query
@@ -224,7 +306,17 @@ ul li a img{
     .forces{
         grid-template-columns: repeat(1, 1fr);
     }
+    .video, .products, .app{
+        grid-template-columns: repeat(1, 1fr);
+    }
     .video-apps{
         flex-wrap: wrap;
+    }
+    .footer-parts{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .fa-paper-plane{
+        right: 5%;
     }
 }
