--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/*=========================
+    Afjalul Karim Saad -- Editor
+=========================*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 *{
     margin: 0;
@@ -249,7 +252,8 @@ footer{
 .fa-twitter{
     font-size: 35px;
     color: #00aeff;
-    padding: 10px
+    padding: 10px;
+    cursor: not-allowed;
 }
 .footer-right{
     font-size: 18px;
